Murphi3.1/src/y.output
Nonterminals useless in grammar

   onerule
   fairness
   liveness
   liveU
   liveE
   liveEA
   liveAE
   liveAIE
   liveAIU


Terminals unused in grammar

   PROGRAM
   PROCESS
   IN
   OLDEND
   INTERLEAVED
   TRACEUNTIL
   FAIRNESS
   LIVENESS
   ALWAYS
   EVENTUALLY
   UNTIL
   FAILED
   LIVENESSSET
   ENDLIVENESSSET
   FAIRNESSSET
   ENDFAIRNESSSET


Rules useless in grammar

  252 onerule: rule semi
  253        | rule

  254 fairness: FAIRNESS optString expr

  255 liveness: liveU
  256         | liveE
  257         | liveAE
  258         | liveEA
  259         | liveAIU
  260         | liveAIE

  261 liveU: LIVENESS optString expr UNTIL expr

  262 liveE: LIVENESS optString EVENTUALLY expr

  263 liveEA: LIVENESS optString EVENTUALLY ALWAYS expr

  264 liveAE: LIVENESS optString ALWAYS EVENTUALLY expr

  265 liveAIE: LIVENESS optString ALWAYS expr IMPLIES EVENTUALLY expr

  266 liveAIU: LIVENESS optString ALWAYS expr IMPLIES expr UNTIL expr


State 86 conflicts: 1 shift/reduce
State 191 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 $@1: %empty

    2 $@2: %empty

    3 $@3: %empty

    4 prog: $@1 decls $@2 procDecls $@3 rules

    5 decls: decls decl
    6      | %empty

    7 decl: CONST constDecls
    8     | TYPE typeDecls
    9     | VAR varDecls

   10 constDecls: constDecls constDecl semi
   11           | %empty

   12 semi: ';'

   13 constDecl: ID ':' expr

   14 typeDecls: typeDecls typeDecl semi
   15          | %empty

   16 typeDecl: ID ':' typeExpr

   17 typeExpr: typeid
   18         | enumtype
   19         | subrangetype
   20         | recordtype
   21         | arraytype
   22         | scalarsettype
   23         | uniontype
   24         | multisettype

   25 typeid: ID

   26 $@4: %empty

   27 enumtype: ENUM $@4 '{' enums '}'

   28 enums: enums ',' ID
   29      | enums ID
   30      | ID

   31 subrangetype: expr DOTDOT expr

   32 @5: %empty

   33 @6: %empty

   34 recordtype: RECORD optInterleaved @5 @6 fields endrecord

   35 endrecord: ENDRECORD
   36          | END

   37 optInterleaved: %empty

   38 fields: fields semi field
   39       | fields semi
   40       | field

   41 @7: %empty

   42 field: @7 ID fieldtail

   43 fieldtail: ',' ID fieldtail
   44          | ':' typeExpr

   45 arraytype: ARRAY optInterleaved '[' typeExpr ']' OF typeExpr

   46 multisettype: MULTISET optInterleaved '[' expr ']' OF typeExpr

   47 scalarsettype: SCALARSET '(' expr ')'

   48 uniontype: UNION '{' unionlist '}'

   49 unionlist: unionlist ',' unionlistelt
   50          | unionlistelt ',' unionlistelt

   51 unionlistelt: ID
   52             | scalarsettype
   53             | enumtype

   54 varDecls: varDecls varDecl semi
   55         | %empty

   56 @8: %empty

   57 varDecl: @8 ID vardecltail

   58 vardecltail: ',' ID vardecltail
   59            | ':' typeExpr

   60 procDecls: procDecls procDecl
   61          | procDecls funcDecl
   62          | %empty

   63 $@9: %empty

   64 @10: %empty

   65 $@11: %empty

   66 procDecl: PROCEDURE ID $@9 '(' optformals ')' semi @10 optdecls $@11 optstmts endprocedure semi

   67 endprocedure: ENDPROCEDURE
   68             | END

   69 $@12: %empty

   70 @13: %empty

   71 @14: %empty

   72 @15: %empty

   73 funcDecl: FUNCTION ID $@12 '(' optformals ')' @13 ':' typeExpr semi @14 optdecls @15 optstmts endfunction semi

   74 endfunction: ENDFUNCTION
   75            | END

   76 optformals: formals
   77           | %empty

   78 formals: formals semi formal
   79        | formals semi
   80        | formal
   81        | formals ',' formal

   82 @16: %empty

   83 formal: VAR @16 formalrest

   84 @17: %empty

   85 formal: @17 formalrest

   86 formalrest: ID formaltail

   87 formaltail: ',' ID formaltail
   88           | ':' typeExpr

   89 optdecls: decls bEGIN
   90         | %empty

   91 designator: ID
   92           | designator '[' expr ']'
   93           | designator '.' ID

   94 expr: expr '?' expr ':' expr
   95     | expr IMPLIES expr
   96     | expr '|' expr
   97     | expr '&' expr
   98     | NOT expr
   99     | expr '<' expr
  100     | expr LEQ expr
  101     | expr '>' expr
  102     | expr GEQ expr
  103     | expr '=' expr
  104     | expr NEQ expr
  105     | expr '+' expr
  106     | expr '-' expr
  107     | '+' expr
  108     | '-' expr
  109     | expr '*' expr
  110     | expr '/' expr
  111     | expr '%' expr
  112     | INTCONST
  113     | designator
  114     | ID actuals
  115     | ISUNDEFINED '(' designator ')'
  116     | ISMEMBER '(' designator ',' typeExpr ')'
  117     | '(' expr ')'

  118 $@18: %empty

  119 expr: FORALL $@18 quantifiers do expr endforall

  120 $@19: %empty

  121 expr: EXISTS $@19 quantifiers do expr endexists
  122     | error

  123 $@20: %empty

  124 $@21: %empty

  125 expr: MULTISETCOUNT '(' $@20 ID ':' designator ',' $@21 expr ')'

  126 endforall: ENDFORALL
  127          | END

  128 endexists: ENDEXISTS
  129          | END

  130 actuals: '(' exprlist ')'
  131        | '(' ')'

  132 exprlist: exprlist ',' expr
  133         | expr
  134         | exprlist ',' UNDEFINED
  135         | UNDEFINED

  136 quantifier: ID ':' typeExpr
  137           | ID ASSIGN expr TO expr optBy

  138 quantifiers: quantifier ';' quantifiers
  139            | quantifier

  140 do: DO
  141   | ':'

  142 optBy: BY expr
  143      | %empty

  144 @22: %empty

  145 optstmts: @22 stmts
  146         | %empty

  147 stmts: stmts semi stmt
  148      | stmts semi
  149      | stmt

  150 stmt: assignment
  151     | ifstmt
  152     | whilestmt
  153     | switchstmt
  154     | forstmt
  155     | proccall
  156     | clearstmt
  157     | errorstmt
  158     | assertstmt
  159     | putstmt
  160     | aliasstmt
  161     | returnstmt
  162     | undefinestmt
  163     | multisetaddstmt
  164     | multisetremovestmt

  165 assignment: designator ASSIGN expr
  166           | designator ASSIGN UNDEFINED

  167 ifstmt: IF expr THEN optstmts optElses endif

  168 endif: ENDIF
  169      | END

  170 optElses: elsif optElses
  171         | optElse

  172 elsif: ELSIF expr THEN optstmts

  173 optElse: ELSE optstmts
  174        | %empty

  175 whilestmt: WHILE expr do optstmts endwhile

  176 endwhile: ENDWHILE
  177         | END

  178 @23: %empty

  179 @24: %empty

  180 switchstmt: SWITCH expr @23 @24 optCases optElse endswitch

  181 endswitch: ENDSWITCH
  182          | END

  183 optCases: optCases case
  184         | %empty

  185 case: CASE exprlist ':' optstmts

  186 $@25: %empty

  187 forstmt: FOR $@25 quantifiers do optstmts endfor

  188 endfor: ENDFOR
  189       | END

  190 proccall: ID actuals

  191 clearstmt: CLEAR designator

  192 undefinestmt: UNDEFINE designator

  193 multisetaddstmt: MULTISETADD '(' designator ',' designator ')'

  194 $@26: %empty

  195 $@27: %empty

  196 multisetremovestmt: MULTISETREMOVEPRED '(' $@26 ID ':' designator $@27 ',' expr ')'
  197                   | MULTISETREMOVE '(' expr ',' designator ')'

  198 errorstmt: ERROR STRING

  199 assertstmt: ASSERT expr optString

  200 putstmt: PUT expr
  201        | PUT STRING

  202 $@28: %empty

  203 aliasstmt: ALIAS $@28 aliases do optstmts endalias

  204 endalias: ENDALIAS
  205         | END

  206 aliases: aliases semi alias
  207        | aliases semi
  208        | aliases ',' alias
  209        | alias

  210 alias: ID ':' expr

  211 returnstmt: RETURN optretexpr

  212 optretexpr: expr
  213           | %empty

  214 rules: rule semi rules
  215      | rule semi
  216      | rule

  217 rule: simplerule
  218     | aliasrule
  219     | ruleset
  220     | startstate
  221     | invariant
  222     | error
  223     | choose

  224 @29: %empty

  225 simplerule: RULE optFair optPriority optString optCondition @29 optdecls optstmts endrule

  226 optFair: UNFAIR
  227        | %empty

  228 endrule: ENDRULE
  229        | END

  230 optCondition: expr LONGARROW
  231             | %empty

  232 optString: STRING
  233          | %empty

  234 optPriority: INTCONST
  235            | %empty

  236 $@30: %empty

  237 aliasrule: ALIAS $@30 aliases do rules endalias

  238 $@31: %empty

  239 ruleset: RULESET $@31 quantifiers do rules endruleset

  240 endruleset: ENDRULESET
  241           | END

  242 $@32: %empty

  243 $@33: %empty

  244 choose: CHOOSE $@32 ID ':' designator $@33 do rules endchoose

  245 endchoose: ENDCHOOSE
  246          | END

  247 @34: %empty

  248 startstate: STARTSTATE @34 optString optdecls optstmts endstartstate

  249 endstartstate: ENDSTARTSTATE
  250              | END

  251 invariant: INVARIANT optString expr


Terminals, with rules where they appear

$end (0) 0
'%' (37) 111
'&' (38) 97
'(' (40) 47 66 73 115 116 117 125 130 131 193 196 197
')' (41) 47 66 73 115 116 117 125 130 131 193 196 197
'*' (42) 109
'+' (43) 105 107
',' (44) 28 43 49 50 58 81 87 116 125 132 134 193 196 197 208
'-' (45) 106 108
'.' (46) 93
'/' (47) 110
':' (58) 13 16 44 59 73 88 94 125 136 141 185 196 210 244
';' (59) 12 138
'<' (60) 99
'=' (61) 103
'>' (62) 101
'?' (63) 94
'[' (91) 45 46 92
']' (93) 45 46 92
'{' (123) 27 48
'|' (124) 96
'}' (125) 27 48
error (256) 122 222
END (258) 36 68 75 127 129 169 177 182 189 205 229 241 246 250
PROGRAM (259)
PROCESS (260)
PROCEDURE (261) 66
ENDPROCEDURE (262) 67
FUNCTION (263) 73
ENDFUNCTION (264) 74
RULE (265) 225
ENDRULE (266) 228
RULESET (267) 239
ENDRULESET (268) 240
ALIAS (269) 203 237
ENDALIAS (270) 204
IF (271) 167
THEN (272) 167 172
ELSIF (273) 172
ELSE (274) 173
ENDIF (275) 168
SWITCH (276) 180
CASE (277) 185
ENDSWITCH (278) 181
FOR (279) 187
FORALL (280) 119
EXISTS (281) 121
IN (282)
DO (283) 140
ENDFOR (284) 188
ENDFORALL (285) 126
ENDEXISTS (286) 128
WHILE (287) 175
ENDWHILE (288) 176
RETURN (289) 211
TO (290) 137
bEGIN (291) 89
BY (292) 142
OLDEND (293)
LONGARROW (294) 230
DOTDOT (295) 31
ASSIGN (296) 137 165 166
CLEAR (297) 191
ERROR (298) 198
ASSERT (299) 199
PUT (300) 200 201
CONST (301) 7
TYPE (302) 8
VAR (303) 9 83
ENUM (304) 27
INTERLEAVED (305)
RECORD (306) 34
ARRAY (307) 45
OF (308) 45 46
ENDRECORD (309) 35
STARTSTATE (310) 248
ENDSTARTSTATE (311) 249
INVARIANT (312) 251
TRACEUNTIL (313)
STRING (314) 198 201 232
ID (315) 13 16 25 28 29 30 42 43 51 57 58 66 73 86 87 91 93 114 125
    136 137 190 196 210 244
INTCONST (316) 112 234
FAIRNESS (317)
LIVENESS (318)
ALWAYS (319)
EVENTUALLY (320)
UNTIL (321)
FAILED (322)
UNFAIR (323) 226
LIVENESSSET (324)
ENDLIVENESSSET (325)
FAIRNESSSET (326)
ENDFAIRNESSSET (327)
SCALARSET (328) 47
ISMEMBER (329) 116
UNDEFINE (330) 192
ISUNDEFINED (331) 115
UNDEFINED (332) 134 135 166
UNION (333) 48
MULTISET (334) 46
MULTISETREMOVE (335) 197
MULTISETREMOVEPRED (336) 196
MULTISETADD (337) 193
MULTISETCOUNT (338) 125
CHOOSE (339) 244
ENDCHOOSE (340) 245
IMPLIES (341) 95
NOT (342) 98
LEQ (343) 100
NEQ (344) 104
GEQ (345) 102


Nonterminals, with rules where they appear

$accept (112)
    on left: 0
prog (113)
    on left: 4, on right: 0
$@1 (114)
    on left: 1, on right: 4
$@2 (115)
    on left: 2, on right: 4
$@3 (116)
    on left: 3, on right: 4
decls (117)
    on left: 5 6, on right: 4 5 89
decl (118)
    on left: 7 8 9, on right: 5
constDecls (119)
    on left: 10 11, on right: 7 10
semi (120)
    on left: 12, on right: 10 14 38 39 54 66 73 78 79 147 148 206 207
    214 215
constDecl (121)
    on left: 13, on right: 10
typeDecls (122)
    on left: 14 15, on right: 8 14
typeDecl (123)
    on left: 16, on right: 14
typeExpr (124)
    on left: 17 18 19 20 21 22 23 24, on right: 16 44 45 46 59 73 88
    116 136
typeid (125)
    on left: 25, on right: 17
enumtype (126)
    on left: 27, on right: 18 53
$@4 (127)
    on left: 26, on right: 27
enums (128)
    on left: 28 29 30, on right: 27 28 29
subrangetype (129)
    on left: 31, on right: 19
recordtype (130)
    on left: 34, on right: 20
@5 (131)
    on left: 32, on right: 34
@6 (132)
    on left: 33, on right: 34
endrecord (133)
    on left: 35 36, on right: 34
optInterleaved (134)
    on left: 37, on right: 34 45 46
fields (135)
    on left: 38 39 40, on right: 34 38 39
field (136)
    on left: 42, on right: 38 40
@7 (137)
    on left: 41, on right: 42
fieldtail (138)
    on left: 43 44, on right: 42 43
arraytype (139)
    on left: 45, on right: 21
multisettype (140)
    on left: 46, on right: 24
scalarsettype (141)
    on left: 47, on right: 22 52
uniontype (142)
    on left: 48, on right: 23
unionlist (143)
    on left: 49 50, on right: 48 49
unionlistelt (144)
    on left: 51 52 53, on right: 49 50
varDecls (145)
    on left: 54 55, on right: 9 54
varDecl (146)
    on left: 57, on right: 54
@8 (147)
    on left: 56, on right: 57
vardecltail (148)
    on left: 58 59, on right: 57 58
procDecls (149)
    on left: 60 61 62, on right: 4 60 61
procDecl (150)
    on left: 66, on right: 60
$@9 (151)
    on left: 63, on right: 66
@10 (152)
    on left: 64, on right: 66
$@11 (153)
    on left: 65, on right: 66
endprocedure (154)
    on left: 67 68, on right: 66
funcDecl (155)
    on left: 73, on right: 61
$@12 (156)
    on left: 69, on right: 73
@13 (157)
    on left: 70, on right: 73
@14 (158)
    on left: 71, on right: 73
@15 (159)
    on left: 72, on right: 73
endfunction (160)
    on left: 74 75, on right: 73
optformals (161)
    on left: 76 77, on right: 66 73
formals (162)
    on left: 78 79 80 81, on right: 76 78 79 81
formal (163)
    on left: 83 85, on right: 78 80 81
@16 (164)
    on left: 82, on right: 83
@17 (165)
    on left: 84, on right: 85
formalrest (166)
    on left: 86, on right: 83 85
formaltail (167)
    on left: 87 88, on right: 86 87
optdecls (168)
    on left: 89 90, on right: 66 73 225 248
designator (169)
    on left: 91 92 93, on right: 92 93 113 115 116 125 165 166 191
    192 193 196 197 244
expr (170)
    on left: 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108
    109 110 111 112 113 114 115 116 117 119 121 122 125, on right:
    13 31 46 47 92 94 95 96 97 98 99 100 101 102 103 104 105 106 107
    108 109 110 111 117 119 121 125 132 133 137 142 165 167 172 175
    180 196 197 199 200 210 212 230 251
$@18 (171)
    on left: 118, on right: 119
$@19 (172)
    on left: 120, on right: 121
$@20 (173)
    on left: 123, on right: 125
$@21 (174)
    on left: 124, on right: 125
endforall (175)
    on left: 126 127, on right: 119
endexists (176)
    on left: 128 129, on right: 121
actuals (177)
    on left: 130 131, on right: 114 190
exprlist (178)
    on left: 132 133 134 135, on right: 130 132 134 185
quantifier (179)
    on left: 136 137, on right: 138 139
quantifiers (180)
    on left: 138 139, on right: 119 121 138 187 239
do (181)
    on left: 140 141, on right: 119 121 175 187 203 237 239 244
optBy (182)
    on left: 142 143, on right: 137
optstmts (183)
    on left: 145 146, on right: 66 73 167 172 173 175 185 187 203 225
    248
@22 (184)
    on left: 144, on right: 145
stmts (185)
    on left: 147 148 149, on right: 145 147 148
stmt (186)
    on left: 150 151 152 153 154 155 156 157 158 159 160 161 162 163
    164, on right: 147 149
assignment (187)
    on left: 165 166, on right: 150
ifstmt (188)
    on left: 167, on right: 151
endif (189)
    on left: 168 169, on right: 167
optElses (190)
    on left: 170 171, on right: 167 170
elsif (191)
    on left: 172, on right: 170
optElse (192)
    on left: 173 174, on right: 171 180
whilestmt (193)
    on left: 175, on right: 152
endwhile (194)
    on left: 176 177, on right: 175
switchstmt (195)
    on left: 180, on right: 153
@23 (196)
    on left: 178, on right: 180
@24 (197)
    on left: 179, on right: 180
endswitch (198)
    on left: 181 182, on right: 180
optCases (199)
    on left: 183 184, on right: 180 183
case (200)
    on left: 185, on right: 183
forstmt (201)
    on left: 187, on right: 154
$@25 (202)
    on left: 186, on right: 187
endfor (203)
    on left: 188 189, on right: 187
proccall (204)
    on left: 190, on right: 155
clearstmt (205)
    on left: 191, on right: 156
undefinestmt (206)
    on left: 192, on right: 162
multisetaddstmt (207)
    on left: 193, on right: 163
multisetremovestmt (208)
    on left: 196 197, on right: 164
$@26 (209)
    on left: 194, on right: 196
$@27 (210)
    on left: 195, on right: 196
errorstmt (211)
    on left: 198, on right: 157
assertstmt (212)
    on left: 199, on right: 158
putstmt (213)
    on left: 200 201, on right: 159
aliasstmt (214)
    on left: 203, on right: 160
$@28 (215)
    on left: 202, on right: 203
endalias (216)
    on left: 204 205, on right: 203 237
aliases (217)
    on left: 206 207 208 209, on right: 203 206 207 208 237
alias (218)
    on left: 210, on right: 206 208 209
returnstmt (219)
    on left: 211, on right: 161
optretexpr (220)
    on left: 212 213, on right: 211
rules (221)
    on left: 214 215 216, on right: 4 214 237 239 244
rule (222)
    on left: 217 218 219 220 221 222 223, on right: 214 215 216
simplerule (223)
    on left: 225, on right: 217
@29 (224)
    on left: 224, on right: 225
optFair (225)
    on left: 226 227, on right: 225
endrule (226)
    on left: 228 229, on right: 225
optCondition (227)
    on left: 230 231, on right: 225
optString (228)
    on left: 232 233, on right: 199 225 248 251
optPriority (229)
    on left: 234 235, on right: 225
aliasrule (230)
    on left: 237, on right: 218
$@30 (231)
    on left: 236, on right: 237
ruleset (232)
    on left: 239, on right: 219
$@31 (233)
    on left: 238, on right: 239
endruleset (234)
    on left: 240 241, on right: 239
choose (235)
    on left: 244, on right: 223
$@32 (236)
    on left: 242, on right: 244
$@33 (237)
    on left: 243, on right: 244
endchoose (238)
    on left: 245 246, on right: 244
startstate (239)
    on left: 248, on right: 220
@34 (240)
    on left: 247, on right: 248
endstartstate (241)
    on left: 249 250, on right: 248
invariant (242)
    on left: 251, on right: 221


State 0

    0 $accept: . prog $end

    $default  reduce using rule 1 ($@1)

    prog  go to state 1
    $@1   go to state 2


State 1

    0 $accept: prog . $end

    $end  shift, and go to state 3


State 2

    4 prog: $@1 . decls $@2 procDecls $@3 rules

    $default  reduce using rule 6 (decls)

    decls  go to state 4


State 3

    0 $accept: prog $end .

    $default  accept


State 4

    4 prog: $@1 decls . $@2 procDecls $@3 rules
    5 decls: decls . decl

    CONST  shift, and go to state 5
    TYPE   shift, and go to state 6
    VAR    shift, and go to state 7

    $default  reduce using rule 2 ($@2)

    $@2   go to state 8
    decl  go to state 9


State 5

    7 decl: CONST . constDecls

    $default  reduce using rule 11 (constDecls)

    constDecls  go to state 10


State 6

    8 decl: TYPE . typeDecls

    $default  reduce using rule 15 (typeDecls)

    typeDecls  go to state 11


State 7

    9 decl: VAR . varDecls

    $default  reduce using rule 55 (varDecls)

    varDecls  go to state 12


State 8

    4 prog: $@1 decls $@2 . procDecls $@3 rules

    $default  reduce using rule 62 (procDecls)

    procDecls  go to state 13


State 9

    5 decls: decls decl .

    $default  reduce using rule 5 (decls)


State 10

    7 decl: CONST constDecls .
   10 constDecls: constDecls . constDecl semi

    ID  shift, and go to state 14

    $default  reduce using rule 7 (decl)

    constDecl  go to state 15


State 11

    8 decl: TYPE typeDecls .
   14 typeDecls: typeDecls . typeDecl semi

    ID  shift, and go to state 16

    $default  reduce using rule 8 (decl)

    typeDecl  go to state 17


State 12

    9 decl: VAR varDecls .
   54 varDecls: varDecls . varDecl semi

    ID        reduce using rule 56 (@8)
    $default  reduce using rule 9 (decl)

    varDecl  go to state 18
    @8       go to state 19


State 13

    4 prog: $@1 decls $@2 procDecls . $@3 rules
   60 procDecls: procDecls . procDecl
   61          | procDecls . funcDecl

    PROCEDURE  shift, and go to state 20
    FUNCTION   shift, and go to state 21

    $default  reduce using rule 3 ($@3)

    $@3       go to state 22
    procDecl  go to state 23
    funcDecl  go to state 24


State 14

   13 constDecl: ID . ':' expr

    ':'  shift, and go to state 25


State 15

   10 constDecls: constDecls constDecl . semi

    ';'  shift, and go to state 26

    semi  go to state 27


State 16

   16 typeDecl: ID . ':' typeExpr

    ':'  shift, and go to state 28


State 17

   14 typeDecls: typeDecls typeDecl . semi

    ';'  shift, and go to state 26

    semi  go to state 29


State 18

   54 varDecls: varDecls varDecl . semi

    ';'  shift, and go to state 26

    semi  go to state 30


State 19

   57 varDecl: @8 . ID vardecltail

    ID  shift, and go to state 31


State 20

   66 procDecl: PROCEDURE . ID $@9 '(' optformals ')' semi @10 optdecls $@11 optstmts endprocedure semi

    ID  shift, and go to state 32


State 21

   73 funcDecl: FUNCTION . ID $@12 '(' optformals ')' @13 ':' typeExpr semi @14 optdecls @15 optstmts endfunction semi

    ID  shift, and go to state 33


State 22

    4 prog: $@1 decls $@2 procDecls $@3 . rules

    error       shift, and go to state 34
    RULE        shift, and go to state 35
    RULESET     shift, and go to state 36
    ALIAS       shift, and go to state 37
    STARTSTATE  shift, and go to state 38
    INVARIANT   shift, and go to state 39
    CHOOSE      shift, and go to state 40

    rules       go to state 41
    rule        go to state 42
    simplerule  go to state 43
    aliasrule   go to state 44
    ruleset     go to state 45
    choose      go to state 46
    startstate  go to state 47
    invariant   go to state 48


State 23

   60 procDecls: procDecls procDecl .

    $default  reduce using rule 60 (procDecls)


State 24

   61 procDecls: procDecls funcDecl .

    $default  reduce using rule 61 (procDecls)


State 25

   13 constDecl: ID ':' . expr

    error          shift, and go to state 49
    FORALL         shift, and go to state 50
    EXISTS         shift, and go to state 51
    ID             shift, and go to state 52
    INTCONST       shift, and go to state 53
    ISMEMBER       shift, and go to state 54
    ISUNDEFINED    shift, and go to state 55
    MULTISETCOUNT  shift, and go to state 56
    NOT            shift, and go to state 57
    '+'            shift, and go to state 58
    '-'            shift, and go to state 59
    '('            shift, and go to state 60

    designator  go to state 61
    expr        go to state 62


State 26

   12 semi: ';' .

    $default  reduce using rule 12 (semi)


State 27

   10 constDecls: constDecls constDecl semi .

    $default  reduce using rule 10 (constDecls)


State 28

   16 typeDecl: ID ':' . typeExpr

    error          shift, and go to state 49
    FORALL         shift, and go to state 50
    EXISTS         shift, and go to state 51
    ENUM           shift, and go to state 63
    RECORD         shift, and go to state 64
    ARRAY          shift, and go to state 65
    ID             shift, and go to state 66
    INTCONST       shift, and go to state 53
    SCALARSET      shift, and go to state 67
    ISMEMBER       shift, and go to state 54
    ISUNDEFINED    shift, and go to state 55
    UNION          shift, and go to state 68
    MULTISET       shift, and go to state 69
    MULTISETCOUNT  shift, and go to state 56
    NOT            shift, and go to state 57
    '+'            shift, and go to state 58
    '-'            shift, and go to state 59
    '('            shift, and go to state 60

    typeExpr       go to state 70
    typeid         go to state 71
    enumtype       go to state 72
    subrangetype   go to state 73
    recordtype     go to state 74
    arraytype      go to state 75
    multisettype   go to state 76
    scalarsettype  go to state 77
    uniontype      go to state 78
    designator     go to state 61
    expr           go to state 79


State 29

   14 typeDecls: typeDecls typeDecl semi .

    $default  reduce using rule 14 (typeDecls)


State 30

   54 varDecls: varDecls varDecl semi .

    $default  reduce using rule 54 (varDecls)


State 31

   57 varDecl: @8 ID . vardecltail

    ':'  shift, and go to state 80
    ','  shift, and go to state 81

    vardecltail  go to state 82


State 32

   66 procDecl: PROCEDURE ID . $@9 '(' optformals ')' semi @10 optdecls $@11 optstmts endprocedure semi

    $default  reduce using rule 63 ($@9)

    $@9  go to state 83


State 33

   73 funcDecl: FUNCTION ID . $@12 '(' optformals ')' @13 ':' typeExpr semi @14 optdecls @15 optstmts endfunction semi

    $default  reduce using rule 69 ($@12)

    $@12  go to state 84


State 34

  222 rule: error .

    $default  reduce using rule 222 (rule)


State 35

  225 simplerule: RULE . optFair optPriority optString optCondition @29 optdecls optstmts endrule

    UNFAIR  shift, and go to state 85

    $default  reduce using rule 227 (optFair)

    optFair  go to state 86


State 36

  239 ruleset: RULESET . $@31 quantifiers do rules endruleset

    $default  reduce using rule 238 ($@31)

    $@31  go to state 87


State 37

  237 aliasrule: ALIAS . $@30 aliases do rules endalias

    $default  reduce using rule 236 ($@30)

    $@30  go to state 88


State 38

  248 startstate: STARTSTATE . @34 optString optdecls optstmts endstartstate

    $default  reduce using rule 247 (@34)

    @34  go to state 89


State 39

  251 invariant: INVARIANT . optString expr

    STRING  shift, and go to state 90

    $default  reduce using rule 233 (optString)

    optString  go to state 91


State 40

  244 choose: CHOOSE . $@32 ID ':' designator $@33 do rules endchoose

    $default  reduce using rule 242 ($@32)

    $@32  go to state 92


State 41

    4 prog: $@1 decls $@2 procDecls $@3 rules .

    $default  reduce using rule 4 (prog)


State 42

  214 rules: rule . semi rules
  215      | rule . semi
  216      | rule .

    ';'  shift, and go to state 26

    $default  reduce using rule 216 (rules)

    semi  go to state 93


State 43

  217 rule: simplerule .

    $default  reduce using rule 217 (rule)


State 44

  218 rule: aliasrule .

    $default  reduce using rule 218 (rule)


State 45

  219 rule: ruleset .

    $default  reduce using rule 219 (rule)


State 46

  223 rule: choose .

    $default  reduce using rule 223 (rule)


State 47

  220 rule: startstate .

    $default  reduce using rule 220 (rule)


State 48

  221 rule: invariant .

    $default  reduce using rule 221 (rule)


State 49

  122 expr: error .

    $default  reduce using rule 122 (expr)


State 50

  119 expr: FORALL . $@18 quantifiers do expr endforall

    $default  reduce using rule 118 ($@18)

    $@18  go to state 94


State 51

  121 expr: EXISTS . $@19 quantifiers do expr endexists

    $default  reduce using rule 120 ($@19)

    $@19  go to state 95


State 52

   91 designator: ID .
  114 expr: ID . actuals

    '('  shift, and go to state 96

    $default  reduce using rule 91 (designator)

    actuals  go to state 97


State 53

  112 expr: INTCONST .

    $default  reduce using rule 112 (expr)


State 54

  116 expr: ISMEMBER . '(' designator ',' typeExpr ')'

    '('  shift, and go to state 98


State 55

  115 expr: ISUNDEFINED . '(' designator ')'

    '('  shift, and go to state 99


State 56

  125 expr: MULTISETCOUNT . '(' $@20 ID ':' designator ',' $@21 expr ')'

    '('  shift, and go to state 100


State 57

   98 expr: NOT . expr

    error          shift, and go to state 49
    FORALL         shift, and go to state 50
    EXISTS         shift, and go to state 51
    ID             shift, and go to state 52
    INTCONST       shift, and go to state 53
    ISMEMBER       shift, and go to state 54
    ISUNDEFINED    shift, and go to state 55
    MULTISETCOUNT  shift, and go to state 56
    NOT            shift, and go to state 57
    '+'            shift, and go to state 58
    '-'            shift, and go to state 59
    '('            shift, and go to state 60

    designator  go to state 61
    expr        go to state 101


State 58

  107 expr: '+' . expr

    error          shift, and go to state 49
    FORALL         shift, and go to state 50
    EXISTS         shift, and go to state 51
    ID             shift, and go to state 52
    INTCONST       shift, and go to state 53
    ISMEMBER       shift, and go to state 54
    ISUNDEFINED    shift, and go to state 55
    MULTISETCOUNT  shift, and go to state 56
    NOT            shift, and go to state 57
    '+'            shift, and go to state 58
    '-'            shift, and go to state 59
    '('            shift, and go to state 60

    designator  go to state 61
    expr        go to state 102


State 59

  108 expr: '-' . expr

    error          shift, and go to state 49
    FORALL         shift, and go to state 50
    EXISTS         shift, and go to state 51
    ID             shift, and go to state 52
    INTCONST       shift, and go to state 53
    ISMEMBER       shift, and go to state 54
    ISUNDEFINED    shift, and go to state 55
    MULTISETCOUNT  shift, and go to state 56
    NOT            shift, and go to state 57
    '+'            shift, and go to state 58
    '-'            shift, and go to state 59
    '('            shift, and go to state 60

    designator  go to state 61
    expr        go to state 103


State 60

  117 expr: '(' . expr ')'

    error          shift, and go to state 49
    FORALL         shift, and go to state 50
    EXISTS         shift, and go to state 51
    ID             shift, and go to state 52
    INTCONST       shift, and go to state 53
    ISMEMBER       shift, and go to state 54
    ISUNDEFINED    shift, and go to state 55
    MULTISETCOUNT  shift, and go to state 56
    NOT            shift, and go to state 57
    '+'            shift, and go to state 58
    '-'            shift, and go to state 59
    '('            shift, and go to state 60

    designator  go to state 61
    expr        go to state 104


State 61

   92 designator: designator . '[' expr ']'
   93           | designator . '.' ID
  113 expr: designator .

    '['  shift, and go to state 105
    '.'  shift, and go to state 106

    $default  reduce using rule 113 (expr)


State 62

   13 constDecl: ID ':' expr .
   94 expr: expr . '?' expr ':' expr
   95     | expr . IMPLIES expr
   96     | expr . '|' expr
   97     | expr . '&' expr
   99     | expr . '<' expr
  100     | expr . LEQ expr
  101     | expr . '>' expr
  102     | expr . GEQ expr
  103     | expr . '=' expr
  104     | expr . NEQ expr
  105     | expr . '+' expr
  106     | expr . '-' expr
  109     | expr . '*' expr
  110     | expr . '/' expr
  111     | expr . '%' expr

    '?'      shift, and go to state 107
    IMPLIES  shift, and go to state 108
    '|'      shift, and go to state 109
    '&'      shift, and go to state 110
    '<'      shift, and go to state 111
    LEQ      shift, and go to state 112
    '='      shift, and go to state 113
    NEQ      shift, and go to state 114
    GEQ      shift, and go to state 115
    '>'      shift, and go to state 116
    '+'      shift, and go to state 117
    '-'      shift, and go to state 118
    '*'      shift, and go to state 119
    '/'      shift, and go to state 120
    '%'      shift, and go to state 121

    $default  reduce using rule 13 (constDecl)


State 63

   27 enumtype: ENUM . $@4 '{' enums '}'

    $default  reduce using rule 26 ($@4)

    $@4  go to state 122


State 64

   34 recordtype: RECORD . optInterleaved @5 @6 fields endrecord

    $default  reduce using rule 37 (optInterleaved)

    optInterleaved  go to state 123


State 65

   45 arraytype: ARRAY . optInterleaved '[' typeExpr ']' OF typeExpr

    $default  reduce using rule 37 (optInterleaved)

    optInterleaved  go to state 124


State 66

   25 typeid: ID .
   91 designator: ID .
  114 expr: ID . actuals

    '('  shift, and go to state 96
